Alignment fix

--- a/dicesim.css
+++ b/dicesim.css
@@ -1,4 +1,3 @@
 ﻿html, body {
   height: 100%;
-  width: 100%;
 }
